# hsarg-haskell

./: README.md  hsarg-haskell.cabal
src/DSL/Abstract/: Api.hs  Core.hs  Fixpoint.hs  Test.hs
src/DSL/Structured/: Api.hs  Core.hs  Standard.hs  Test.hs
src/DSL/Translated/: Api.hs  Core.hs  Correspondence.hs  Test.hs
src/Data/Extension/: Graph.hs  Ord.hs
